# geo-replicated-redis

./: LICENSE  README.md
apiserver/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apiserver/config/: .env.template
apiserver/src/: app.py  config.py  schemas.py  utils.py
apiserver/src/api/: handlers.py
apiserver/src/providers/: __init__.py  amqp.py  base.py
assets/: schema.excalidraw
worker/: .env.template  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum
worker/cmd/worker/: main.go
worker/internal/common/: types.go
worker/internal/config/: config.go
worker/internal/providers/: redis.go
worker/internal/worker/: handler.go  worker.go
worker/pkg/amqp/: amqp.go
worker/pkg/redis/: redis.go
